--- a/ex3_mssql.ipynb
+++ b/ex3_mssql.ipynb
@@ -23,7 +23,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "engine = create_engine('mssql+pymssql://sa:Password!@localhost/mydb?charset=utf8')"
+    "engine = create_engine('mssql+pymssql://sa:Password!@localhost/mydb')"
    ]
   },
   {
@@ -69,7 +69,7 @@
    ],
    "source": [
     "with engine.connect() as conn:\n",
-    "    conn.execute(text('CREATE TABLE mytbl55 (id int, fname text)'))"
+    "    conn.execute(text('CREATE TABLE mytable (id int, fname text)'))"
    ]
   },
   {
@@ -356,11 +356,6 @@
     "df = pd.read_csv(url)\n",
     "df"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
